data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_714.wast
;; 5. **Test: Loop with Conditional Exit via `br_if`**    - **Description:** Construct a loop where the exit condition relies on a `br_if`. The loop should only exit if the condition becomes true after a certain number of iterations.    - **Constraint:** Ensure that the `br_if` condition is correctly evaluated within the loop context and leads to the correct loop termination, validating correct in-loop condition checks.

(assert_invalid
  (module
    (func $loop-with-conditional-exit-via-br_if (param $count i32) (result i32)
      (local $i i32)
      (local.set $i (i32.const 0))
      (loop $loop (result i32)
        (local.set $i (i32.add (local.get $i) (i32.const 1)))
        (br_if $loop (i32.ge_u (local.get $i) (local.get $count)))
        (i32.const 42)
      )
    )
  )
  "type mismatch"
)